Fixed spacing on wager form input space

--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ th {
 }
 
 .input-field {
-  width: 50%;
+  width: 75%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
